objects/UE_Proposal__c.object
<CustomObject>
    <fields>
        <fullName>AppId__c</fullName>
        <externalId>true</externalId>
        <label>AppId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLineActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLineActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineItemId__c</fullName>
        <label>LineItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <label>QuoteId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Line__c</fullName>
        <label>Type of Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US Legal</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cartId__c</fullName>
        <label>cartId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>UE Proposal</label>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Orphan Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UE Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>